[gd_scene load_steps=3 format=3 uid="uid://bip382xqa46t6"]

[ext_resource type="Script" path="res://scenes/effect/vertical_explosion_effect.gd" id="1_4edgl"]
[ext_resource type="PackedScene" uid="uid://cv8508xitrp6t" path="res://scenes/effect/sprite/explosion.tscn" id="1_pipxp"]

[node name="VerticalExplosionEffect" type="Node2D"]
script = ExtResource("1_4edgl")

[node name="Explosion5" parent="." instance=ExtResource("1_pipxp")]
position = Vector2(16, 0)

[node name="Explosion4" parent="." instance=ExtResource("1_pipxp")]
position = Vector2(-16, 0)

[node name="Explosion3" parent="." instance=ExtResource("1_pipxp")]
position = Vector2(0, -32)

[node name="Explosion2" parent="." instance=ExtResource("1_pipxp")]
position = Vector2(0, 32)

[node name="Explosion1" parent="." instance=ExtResource("1_pipxp")]
